# realtor-agent

./: .dockerfile  .dockerrc  .env.example  .gitignore  .pre-commit-config.yaml  3.0.0  BUTTON_CONFIGURATION_GUIDE.md  CODEBASE_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  ENHANCEMENTS.md  IMMEDIATE_ACTIONS.md  INTEGRATION_COMPLETE.md  INTEGRATION_REPORT.md  Integration_Report.xlsx  LICENSE  Land_and_Build_Flipping_System_v2.xlsx  NEXT_STEPS.md  README.md  README_clean.md  README_clean_full.md  Real_Estate_Investment_Toolkit.xlsx  SETUP_GUIDE.md  SYNC_README.md  TEST_REPORT.md  TOOLKIT_SUMMARY.md  US_BEST_DEALS_REPORT.json  US_BEST_MARKETS_REPORT.json  VERIFICATION_REPORT.md  WEB_INTERFACE_README.md  check_env.py  config.yaml  config.yaml.example  contact_databases.json  convert_and_serve.py  create_toolkit_excel.py  create_web_integration.py  deploy.py  examine_excel.py  examine_pdf.py  example_counties_detailed.json  (+32 more)
.claude/: launch.json  settings.local.json
STRATEGY/: LEAD_STRATEGY.yaml  LISTING_STRATEGY.yaml  MARKET_SHIFT_STRATEGY.md
automation/: cron_schedules.md  run_cron_job.sh  webhook_client.py  webhook_specs.md
bots/compliance_qa/: bot_config.yml
bots/deal_desk/: bot_config.yml  contract_processor.py
bots/negotiator/: bot_config.yml
bots/outreach/: bot_config.yml
bots/owner_finder/: bot_config.yml
bots/underwriter/: bot_config.yml
bots/web_scout/: bot_config.yml  scrape_rules.md
infrastructure/: Dockerfile  database_schema.sql  docker-compose.yml  setup.py
infrastructure/ci/: ci-cd.yml
infrastructure/environments/: development.yml  production.yml  staging.yml
infrastructure/monitoring/: prometheus.yml
infrastructure/security/: security_config.yml
realtor_agent/: __init__.py  agent_config.yml  cli.py
realtor_agent/analytics/: __init__.py  deal_scoring.py  lead_tracking.py  market_analysis.py
realtor_agent/automation/: __init__.py  notifications.py  scheduler.py  workflow.py
realtor_agent/bots/: __init__.py  base.py  base_bot.py  error_handling.py  state_manager.py
realtor_agent/bots/closer/: __init__.py  (+1 more)
realtor_agent/calculations/: __init__.py  _math.py  advanced.py  intake.py  portfolio.py  rehab_engine.py
realtor_agent/core/: __init__.py  auth.py  cache.py  config.py  database.py  logger.py  migrate.py  models.py  orchestrator.py  query_optimizer.py  seed_data.py  tasks.py  validation.py
realtor_agent/decision_playbooks/: acquisition_flow.md  deal_approval_rules.md  escalation_matrix.md
realtor_agent/integrations/: __init__.py  services.py
realtor_agent/memory/: global_knowledge.yml
realtor_agent/prompts/: orchestrator_prompt.txt  summary_prompt.txt
realtor_agent/utils/: __init__.py  logging.py  sync.py
realtor_agent/web/: __init__.py  db_queries.py
tests/: create_excel_toolkit.py  fix_excel_formulas.py  fix_formulas_reference.py  process_file.py  test_auth_hardening.py  test_configs.py  test_orchestrator.py  test_reports_buttons.py  test_underwriter.py  test_web_scout.py
web/templates/: 404.html  action-plans.html  analytics.html  analytics_backup.html  base.html  bot_activity.html  bots.html  contact-database.html  contacts.html  county-examples.html  dashboard.html  deals.html  enhanced_deals.html  executive-summary.html  financial.html  formulas.html  land_flip_guide.html  login.html  market.html  master-guide.html  performance.html  pipeline.html  pitfalls.html  pro-tips.html  register.html  reports.html  resource-framework.html  settings.html  strategies.html  sync.html  toolkit_dashboard.html  training.html
(+30 files in other folders)
